Connectivity testing worked on high level:) Just need to do a few formatting issue.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2,7 +2,9 @@
   "@@locale": "en",
   "AppName": "ClosetConscious",
   "tagline": "ShopYourCloset",
-  "offlineStatus" : "You are currently offline",
+  "noInternetTitle" : "Oops, No Connection!",
+  "noInternetMessage" : "It looks like you’re offline. Let's reconnect and get back to making mindful choices!",
+  "noInternetSnackBar" : "Still no connection—hang tight! We'll keep trying.",
   "retryConnection" : "Retry",
   "ItemNameLabel" : "Name",
   "ItemNameHint" : "'What is the name of your item?",
