--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -2,7 +2,9 @@
   "@@locale": "zh_CN",
   "AppName": "环保衣橱",
   "tagline": "在衣橱里购物",
-  "offlineStatus": "您当前处于离线状态",
+  "noInternetTitle" : "哎呀，网络连接中断了！",
+  "noInternetMessage" : "看起来您处于离线状态。让我们重新连接，一起继续做出环保的选择吧！",
+  "noInternetSnackBar" : "还没有连接上—请稍等，我们还在努力。",
   "retryConnection": "重试",
   "ItemNameLabel": "名称",
   "ItemNameHint": "您的物品名称是什么？",
