Update the CI Trunk to build .abb file for internal release

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -48,7 +48,7 @@
   "scarf": "Scarf",
   "tech": "Tech",
   "other": "Misc",
-  "perfume": "Perfume",
+  "perfume": "Cosmetic",
   "clothing": "Clothing",
   "shoes": "Shoes",
   "accessory": "Accessory",
