--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -48,7 +48,7 @@
   "scarf": "围巾",
   "tech": "科技",
   "other": "杂项",
-  "perfume": "香水",
+  "perfume": "化妆品",
   "clothing": "服装",
   "shoes": "鞋子",
   "accessory": "配饰",
