--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -247,5 +247,26 @@
   "closetUploadAchievementMessage": "Congratulations! You've uploaded all your items to your virtual closet. Now you're ready to make the most of what you own!",
   "defaultAchievementTitle": "Achievement Unlocked!",
   "defaultAchievementMessage": "You've reached a new milestone! Keep up the great work as you continue your journey towards mindful fashion.",
-  "unableToProcessAccountDeletion": "We are unable to process your account deletion request at the moment. Would you kindly email us at support@example.com for assistance?"
+  "unableToProcessAccountDeletion": "We are unable to process your account deletion request at the moment. Would you kindly email us at support@example.com for assistance?",
+  "uploadItemBronzeTitle": "Bronze Plan - Upload Items",
+  "uploadItemBronzeDescription": "Pay US$19.99 to upload another 200 items",
+  "uploadItemSilverTitle": "Silver Plan - Upload Items",
+  "uploadItemSilverDescription": "Pay US$49.99 to upload another 700 items",
+  "uploadItemGoldTitle": "Gold Plan - Upload Items",
+  "uploadItemGoldDescription": "Pay US$129.99 to upload unlimited items",
+  "editItemBronzeTitle": "Bronze Plan - Edit Item Images",
+  "editItemBronzeDescription": "Pay US$19.99 to edit another 200 items images",
+  "editItemSilverTitle": "Silver Plan - Edit Item Images",
+  "editItemSilverDescription": "Pay US$49.99 to edit another 700 items images",
+  "editItemGoldTitle": "Gold Plan - Edit Item Images",
+  "editItemGoldDescription": "Pay US$129.99 to edit unlimited items images",
+  "selfieBronzeTitle": "Bronze Plan - Selfie",
+  "selfieBronzeDescription": "Pay US$19.99 to take another 200 selfies",
+  "selfieSilverTitle": "Silver Plan - Selfie",
+  "selfieSilverDescription": "Pay US$49.99 to take another 700 selfies",
+  "selfieGoldTitle": "Gold Plan - Selfie",
+  "selfieGoldDescription": "Pay US$129.99 to take unlimited selfies",
+  "multiOutfitTitle": "Multi Outfit Premium Feature",
+  "multiOutfitDescription": "Pay US$19.99 to create multiple outfits a day",
+  "purchase_button": "Purchase Now"
 }
