--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -247,5 +247,26 @@
   "closetUploadAchievementMessage": "你已经穿过了衣柜里的每一件衣服！你正在掌握有意识的时尚选择。做得好！",
   "defaultAchievementTitle": "成就解锁！",
   "defaultAchievementMessage": "你达到了新的里程碑！在有意识的时尚之旅中，继续保持出色的表现。",
-  "unableToProcessAccountDeletion": "我们暂时无法处理您的账户删除请求。请通过电子邮件联系我们：support@example.com，以获取帮助。"
+  "unableToProcessAccountDeletion": "我们暂时无法处理您的账户删除请求。请通过电子邮件联系我们：support@example.com，以获取帮助。",
+  "uploadItemBronzeTitle": "青铜计划 - 上传物品",
+  "uploadItemBronzeDescription": "支付19.99美元上传额外200个物品",
+  "uploadItemSilverTitle": "白银计划 - 上传物品",
+  "uploadItemSilverDescription": "支付49.99美元上传额外700个物品",
+  "uploadItemGoldTitle": "黄金计划 - 上传物品",
+  "uploadItemGoldDescription": "支付129.99美元上传无限数量的物品",
+  "editItemBronzeTitle": "青铜计划 - 编辑物品图片",
+  "editItemBronzeDescription": "支付19.99美元编辑额外200张物品图片",
+  "editItemSilverTitle": "白银计划 - 编辑物品图片",
+  "editItemSilverDescription": "支付49.99美元编辑额外700张物品图片",
+  "editItemGoldTitle": "黄金计划 - 编辑物品图片",
+  "editItemGoldDescription": "支付129.99美元编辑无限数量的物品图片",
+  "selfieBronzeTitle": "青铜计划 - 自拍",
+  "selfieBronzeDescription": "支付19.99美元拍摄额外200张自拍",
+  "selfieSilverTitle": "白银计划 - 自拍",
+  "selfieSilverDescription": "支付49.99美元拍摄额外700张自拍",
+  "selfieGoldTitle": "黄金计划 - 自拍",
+  "selfieGoldDescription": "支付129.99美元拍摄无限数量的自拍",
+  "multiOutfitTitle": "多重搭配高级功能",
+  "multiOutfitDescription": "支付19.99美元每天创建多个搭配",
+  "purchase_button": "立即购买"
 }
