Features updated - Implemented paywall first draft, see if can do billing - Got the payment screen price obtained from Google Billing

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -269,6 +269,7 @@
   "multiOutfitTitle": "Multi Outfit Premium Feature",
   "multiOutfitDescription": "Create multiple outfits a day",
   "purchase_button": "Purchase Now",
+  "loading_text":"Loading",
   "uploadItemBronzeSuccessTitle": "Congrats! 200 More Items to Your Conscious Closet",
   "uploadItemBronzeSuccessMessage": "You've unlocked space for 200 more items!\nKeep adding thoughtfully to build a sustainable wardrobe that reflects your unique style.",
   "uploadItemSilverSuccessTitle": "Amazing! 700 More Items to Express Your Style",
