--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -269,6 +269,7 @@
   "multiOutfitTitle": "多重搭配高级功能",
   "multiOutfitDescription": "每天创建多个搭配",
   "purchase_button": "立即购买",
+  "loading_text":"加载中",
   "uploadItemBronzeSuccessTitle": "恭喜！再增加200件物品到您的环保衣橱",
   "uploadItemBronzeSuccessMessage": "您已解锁了200件物品的空间！继续精心挑选，打造反映您独特风格的可持续衣橱。",
   "uploadItemSilverSuccessTitle": "太棒了！再增加700件物品，展现您的风采",
