Implement debugging symbol and upgrade deno and implement different decoding library

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -249,21 +249,21 @@
   "defaultAchievementMessage": "You've reached a new milestone! Keep up the great work as you continue your journey towards mindful fashion.",
   "unableToProcessAccountDeletion": "We are unable to process your account deletion request at the moment. Would you kindly email us at support@example.com for assistance?",
   "uploadItemBronzeTitle": "Bronze Plan - Upload Items",
-  "uploadItemBronzeDescription": "Upload another 200 items",
+  "uploadItemBronzeDescription": "Upload another 200 more items",
   "uploadItemSilverTitle": "Silver Plan - Upload Items",
-  "uploadItemSilverDescription": "Upload another 700 items",
+  "uploadItemSilverDescription": "Upload another 700 more items",
   "uploadItemGoldTitle": "Gold Plan - Upload Items",
   "uploadItemGoldDescription": "Upload unlimited items",
   "editItemBronzeTitle": "Bronze Plan - Edit Item Images",
-  "editItemBronzeDescription": "Edit another 200 items images",
+  "editItemBronzeDescription": "Edit another 200 more items images",
   "editItemSilverTitle": "Silver Plan - Edit Item Images",
-  "editItemSilverDescription": "Edit 700 items images",
+  "editItemSilverDescription": "Edit 700 more items images",
   "editItemGoldTitle": "Gold Plan - Edit Item Images",
   "editItemGoldDescription": "Edit unlimited items images",
   "selfieBronzeTitle": "Bronze Plan - Selfie",
-  "selfieBronzeDescription": "Take another 200 selfies",
+  "selfieBronzeDescription": "Take another 200 more selfies",
   "selfieSilverTitle": "Silver Plan - Selfie",
-  "selfieSilverDescription": "Take another 700 selfies",
+  "selfieSilverDescription": "Take another 700 more selfies",
   "selfieGoldTitle": "Gold Plan - Selfie",
   "selfieGoldDescription": "Take unlimited selfies",
   "multiOutfitTitle": "Multi Outfit Premium Feature",
