- Implemented in app purchase - Changed messaging for future features to build - Random Bug fixes

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -156,21 +156,21 @@
   "noAchievementFound": "No achievement badges found",
   "congratulations": "Congratulations!",
   "achievementMessage": "Here is your achievement:",
-  "AnalyticsSearchPremiumFeature": "Interested in Usage Analytics?",
-  "trackAnalyticsDescription": "We're exploring a premium feature to analyze your items' cost per wear and provide personalized outfit insights.",
-  "calendarPremiumFeature": "Interested in Calendar View?",
-  "reviewOutfitsInCalendar": "We're considering adding a premium feature to view previous outfits in a calendar format and integrate with multi-closet.",
-  "filterSearchPremiumFeature": "Interested in Advanced Filters?",
-  "quicklyFindItems": "We’re thinking about offering a premium feature to help you filter your items more easily.",
-  "metadataFeatureTitle": "Want to Add More Details?",
-  "metadataFeatureDescription": "We’re thinking about offering a premium feature to let you add extra details to your items.",
-  "multiClosetFeatureTitle": "Interested in Multi-Closet?",
-  "multiClosetFeatureDescription": "We're considering adding a premium feature to create multiple closets, including temporary and disappearing closets.",
-  "swapFeatureTitle": "Interested in Swapping Items?",
-  "swapFeatureDescription": "We're considering adding a premium feature for digitally swapping items and getting notified about nearby swap events.",
   "arrange": "Arrange",
-  "arrangeFeatureTitle": "Interested in Customizing Your Closet Layout?",
-  "arrangeFeatureDescription": "We're considering adding a feature that lets you customize grid sizes and sort items by cost per wear, updated date, and more.",
+  "arrangeFeatureTitle": "Would You Customize\nYour Closet Layout?",
+  "arrangeFeatureDescription": "We’re thinking about letting you customize how your closet is organized. Would sorting by cost per wear or updated date be helpful to you?",
+  "filterSearchPremiumFeature": "Looking for\nAdvanced Filters?",
+  "quicklyFindItems": "We’re thinking about a feature to help you filter your items more easily. Let us know if you’d find this useful.",
+  "multiClosetFeatureTitle": "Would You Use\nMultiple Closets?",
+  "multiClosetFeatureDescription": "We’re exploring the idea of multiple closets (temporary, permanent, disappearing). Would this be something you’d use?",
+  "metadataFeatureTitle": "Would You Like to\nAdd More Details?",
+  "metadataFeatureDescription": "We’re considering letting you add extra details to your items to make them easier to manage. Would this enhance your experience?",
+  "calendarPremiumFeature": "Would a Calendar View\nbe Useful?",
+  "reviewOutfitsInCalendar": "We’re considering adding a feature to view your outfits in a calendar format. Would this help you stay organized?",
+  "swapFeatureTitle": "Interested in\nItem Swapping?",
+  "swapFeatureDescription": "We’re considering a feature for digitally swapping items and getting notified about nearby swap events. Would you participate in something like this?",
+  "AnalyticsSearchPremiumFeature": "Curious about\nUsage Analytics?",
+  "trackAnalyticsDescription": "We’re exploring how to help you track your items' cost per wear and provide personalized outfit insights. Let us know if this would be helpful for you.",
   "ok": "ok",
   "OutfitDay": "Outfit of the Day",
   "noItemsInCategory": "Please upload your items in my closet",
