--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -156,21 +156,21 @@
   "noAchievementFound": "未找到成就徽章",
   "congratulations": "恭喜！",
   "achievementMessage": "这是您的成就：",
-  "AnalyticsSearchPremiumFeature": "有兴趣使用分析功能吗？",
-  "trackAnalyticsDescription": "我们正在探索一项高级功能，可以分析您物品的每次穿着成本，并提供个性化的搭配洞察。",
-  "calendarPremiumFeature": "有兴趣查看日历视图吗？",
-  "reviewOutfitsInCalendar": "我们正在考虑添加一个高级功能，可以在日历格式中查看之前的装扮并与多衣橱集成。",
-  "filterSearchPremiumFeature": "有兴趣使用高级筛选功能吗？",
-  "quicklyFindItems": "我们正在考虑推出一项高级功能，帮助您更轻松地筛选物品。",
-  "metadataFeatureTitle": "想添加更多详细信息吗？",
-  "metadataFeatureDescription": "我们正在考虑推出一项高级功能，让您可以为物品添加更多详细信息。",
-  "multiClosetFeatureTitle": "有兴趣使用多衣橱功能吗？",
-  "multiClosetFeatureDescription": "我们正在考虑添加一个高级功能，以创建多个衣橱，包括临时和消失的衣橱。",
-  "swapFeatureTitle": "有兴趣交换物品吗？",
-  "swapFeatureDescription": "我们正在考虑添加一个高级功能，用于数字交换物品并收到附近交换活动的通知。",
-  "arrange": "排列",
-  "arrangeFeatureTitle": "感兴趣自定义你的衣橱布局吗？",
-  "arrangeFeatureDescription": "我们正在考虑添加一个功能，让你可以自定义网格大小，并按单次穿着成本、更新时间等进行排序。",
+  "arrange": "整理",
+  "arrangeFeatureTitle": "您会定制衣橱布局吗？",
+  "arrangeFeatureDescription": "我们正在考虑让您定制衣橱的组织方式。按穿着成本或更新日期排序对您有帮助吗？",
+  "filterSearchPremiumFeature": "需要高级筛选功能吗？",
+  "quicklyFindItems": "我们正在考虑开发一个功能，帮助您更轻松地筛选物品。请告诉我们这个功能对您是否有用。",
+  "multiClosetFeatureTitle": "您会使用多个衣橱吗？",
+  "multiClosetFeatureDescription": "我们正在探索多个衣橱的想法（临时的、永久的、消失的）。这对您有用吗？",
+  "metadataFeatureTitle": "您想为物品添加更多详细信息吗？",
+  "metadataFeatureDescription": "我们正在考虑让您为物品添加额外的详细信息，使管理更容易。这会增强您的体验吗？",
+  "calendarPremiumFeature": "日历视图对您有帮助吗？",
+  "reviewOutfitsInCalendar": "我们正在考虑添加一个功能，以日历形式查看您的穿搭记录。这个功能能帮助您更好地组织吗？",
+  "swapFeatureTitle": "您对物品交换感兴趣吗？",
+  "swapFeatureDescription": "我们正在考虑开发一个数字交换物品的功能，并通知您附近的交换活动。您会参与这种活动吗？",
+  "AnalyticsSearchPremiumFeature": "对使用分析感到好奇吗？",
+  "trackAnalyticsDescription": "我们正在探索如何帮助您跟踪物品的穿着成本，并提供个性化的穿搭洞察。这个功能对您有帮助吗？",
   "ok": "好的",
   "OutfitDay": "今日穿搭",
   "noItemsInCategory": "请上传您的物品到我的衣橱",
