Implement first achievement for my outfit.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -239,12 +239,18 @@
   "noNewClothes630AchievementMessage": "630 days without new clothes—you're leading by example! Your dedication is making a real impact on the planet.",
   "noNewClothes900Achievement": "Trailblazer of Change!",
   "noNewClothes900AchievementMessage": "Wow! 900 days of choosing wisely. Your influence is inspiring others to rethink their habits. Keep blazing the trail for sustainability!",
+  "noNewClothes1215Achievement": "Icon of Sustainability!",
+  "noNewClothes1215AchievementMessage": "1,215 days of intentional living! Your sustainable journey is inspiring others. Keep leading the way!",
   "noNewClothes1575Achievement": "Master of Minimalism!",
   "noNewClothes1575AchievementMessage": "1,575 days of embracing what you already own. Your journey is nothing short of legendary. You're rewriting the rules of fashion!",
   "allClothesWornAchievement": "All Clothes, All You!",
   "allClothesWornAchievementMessage": "You've worn every single item in your closet! You're mastering mindful fashion choices. Great job!",
   "closetUploadAchievement": "Virtual Closet Complete!",
   "closetUploadAchievementMessage": "Congratulations! You've uploaded all your items to your virtual closet. Now you're ready to make the most of what you own!",
+  "firstSelfieTakenAchievement": "Selfie Superstar!",
+  "firstSelfieTakenAchievementMessage": "You’ve taken your first selfie! Show off your style and let your closet shine!",
+  "firstOutfitCreatedAchievement": "Outfit Architect!",
+  "firstOutfitCreatedAchievementMessage": "Your first outfit is ready! You're on your way to mastering your style.",
   "defaultAchievementTitle": "Achievement Unlocked!",
   "defaultAchievementMessage": "You've reached a new milestone! Keep up the great work as you continue your journey towards mindful fashion.",
   "unableToProcessAccountDeletion": "We are unable to process your account deletion request at the moment. Would you kindly email us at support@example.com for assistance?",
