--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -230,21 +230,27 @@
   "selectItemsToCreateOutfit": "请选择物品以创建您的穿搭。",
   "unsavedChangesMessage": "您有未保存的更改。请选择保存或放弃这些更改，然后再选择照片。",
   "noNewClothes90Achievement": "可持续的开始！",
-  "noNewClothes90AchievementMessage": "你已经坚持90天没有购买新衣服了！你正在为更绿色的未来建立强大的习惯。继续保持！",
+  "noNewClothes90AchievementMessage": "你已经达到了90天不买新衣服的目标！你正在为更加绿色的未来建立强大的习惯。继续保持下去！",
   "noNewClothes225Achievement": "环保战士的崛起！",
-  "noNewClothes225AchievementMessage": "225天，还在继续！你在可持续发展方面引领潮流，你的衣柜蒸蒸日上。了不起的努力！",
+  "noNewClothes225AchievementMessage": "225天持续不买新衣！你正在为可持续发展做出贡献，你的衣橱也欣欣向荣。太棒了！",
   "noNewClothes405Achievement": "有意识选择的冠军！",
-  "noNewClothes405AchievementMessage": "405天的坚守！你对珍惜已有物品的承诺令人鼓舞。你是有意识生活的榜样。",
-  "noNewClothes630Achievement": "可持续发展的领导者！",
-  "noNewClothes630AchievementMessage": "630天没有购买新衣服——你以身作则！你的奉献精神对地球产生了真正的影响。",
-  "noNewClothes900Achievement": "改变的先锋！",
-  "noNewClothes900AchievementMessage": "哇！900天的明智选择。你的影响力正在激励他人重新思考他们的习惯。继续为可持续发展开辟道路！",
+  "noNewClothes405AchievementMessage": "405天强势坚持！你对现有物品的珍惜是一个巨大的启发，你是有意识生活的榜样。",
+  "noNewClothes630Achievement": "可持续发展的领袖！",
+  "noNewClothes630AchievementMessage": "630天不买新衣服——你正在用实际行动引领他人！你的奉献正在对地球产生真实的影响。",
+  "noNewClothes900Achievement": "变革的开拓者！",
+  "noNewClothes900AchievementMessage": "哇！900天明智选择。你的影响力正在启发他人重新思考他们的习惯。继续为可持续发展开拓前路！",
+  "noNewClothes1215Achievement": "可持续的象征！",
+  "noNewClothes1215AchievementMessage": "1,215天有意识的生活！你的可持续之旅正在激励他人。继续引领潮流吧！",
   "noNewClothes1575Achievement": "极简主义大师！",
-  "noNewClothes1575AchievementMessage": "1,575天的坚守，你拥抱了自己已有的物品。你的旅程堪称传奇。你正在改写时尚的规则！",
-  "allClothesWornAchievement": "全部衣服都穿过了！",
-  "allClothesWornAchievementMessage": "你已经穿过了衣柜里的每一件衣服！你正在掌握有意识的时尚选择。做得好！",
-  "closetUploadAchievement": "全部衣服都穿过了！",
-  "closetUploadAchievementMessage": "你已经穿过了衣柜里的每一件衣服！你正在掌握有意识的时尚选择。做得好！",
+  "noNewClothes1575AchievementMessage": "1,575天拥抱你现有的物品。你的旅程堪称传奇。你正在重写时尚规则！",
+  "allClothesWornAchievement": "全衣尽穿，全由你定！",
+  "allClothesWornAchievementMessage": "你已经穿遍了衣橱中的每件单品！你正在掌握有意识的时尚选择。干得好！",
+  "closetUploadAchievement": "虚拟衣橱完成！",
+  "closetUploadAchievementMessage": "恭喜！你已经将所有物品上传到了虚拟衣橱。现在你可以最大限度地利用你拥有的物品了！",
+  "firstSelfieTakenAchievement": "自拍明星！",
+  "firstSelfieTakenAchievementMessage": "你已经拍摄了你的第一张自拍！展示你的风格，让你的衣橱熠熠生辉！",
+  "firstOutfitCreatedAchievement": "穿搭设计师！",
+  "firstOutfitCreatedAchievementMessage": "你的第一套搭配已经完成！你正在迈向掌握个人风格的道路上。",
   "defaultAchievementTitle": "成就解锁！",
   "defaultAchievementMessage": "你达到了新的里程碑！在有意识的时尚之旅中，继续保持出色的表现。",
   "unableToProcessAccountDeletion": "我们暂时无法处理您的账户删除请求。请通过电子邮件联系我们：support@example.com，以获取帮助。",
